# MyMusic

./: CMakeLists.txt  main.c
UI/: MyMusicCSS.css
